hphp/test/zend/bad/tests/classes/constants_error_002.php
<?php
class myclass
{
	const myConst = array();
}
?>
===DONE===
